-- Added frontend routes -- Fixed some namespacing errors -- Added thank you page after voting -- Some minor improvements

--- a/public/assets/css/vote_frontend.css
+++ b/public/assets/css/vote_frontend.css
@@ -29,6 +29,7 @@ body{
     text-transform: uppercase;
     color: #FFF;
     font-size: 28px;
+    margin-bottom: 50px;
 }
 
 #votingportal label{
@@ -66,4 +67,35 @@ body{
 .select2-container--default .select2-selection--single{
     border-radius: 0 !important;
     border: 1px solid #0597F2 !important;
+}
+
+.votingSuccessModal{
+    position: absolute;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+}
+
+.votingSuccessModal img{
+    position: absolute;
+    z-index: 9999;
+    width: 900px;
+    height: 190px;
+    top: 50%;
+    left: 50%;
+    margin-top: -95px;
+    margin-left: -450px;
+}
+
+.blur {
+    width:100%;
+    height:100%;
+    position: absolute;
+    background-image:url('../images/votingportal/voting-screen.png');
+    background-size:cover;
+    -webkit-filter: blur(6px);
+    -moz-filter: blur(6px);
+    -ms-filter: blur(6px);
+    -o-filter: blur(6px);
+    filter: blur(6px);
 }
